Enhanced Dashoard frontend changes